# statrl

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml  lint.yml  tests.yml
docs/: Makefile  requirements.txt
docs/source/: conf.py  core_concepts.rst  index.rst  install.rst  quickstart.rst
docs/source/_static/: custom.css
docs/source/_templates/autosummary/: class.rst
docs/source/api/: adversarial_lipschitz.rst  experiments.rst  index.rst  stochastic.rst  stochastic_anytime.rst  stochastic_knownhorizon.rst  utilities.rst
docs/source/user_guide/: adversarial_lipschitz.rst  experiments.rst  imed.md  imed.rst  index.rst  stochastic.rst  stochastic_anytime.rst  stochastic_knownhorizon.rst
experiments/: analyzeruns.py  massiveruns.py  onerun.py  parallelruns.py  plotruns.py  utils.py
settings/bandits/adversarial/lipschitz/: interaction.py
settings/bandits/adversarial/lipschitz/agents/: ALF.py
settings/bandits/stochastic/anytime/: agent.py  environment.py  interaction.py
settings/bandits/stochastic/anytime/agents/: IMED.md  IMED.py  _Oracle.py  _Random.py
settings/bandits/stochastic/knownhorizon/: environment.py  interaction.py
settings/bandits/stochastic/knownhorizon/wrappers/: wrapper_anytime_knownhorizon.py
src/experiments/: analyzeruns.py  massiveruns.py  onerun.py  parallelruns.py  plotruns.py  utils.py
src/settings/: structuration.md  utils.py  validator.py
src/settings/bandits/adversarial/lipschitz/: agent.py  environment.py  interaction.py
src/settings/bandits/adversarial/lipschitz/agents/: ALF.py
src/settings/bandits/batch/: environment.py
src/settings/bandits/stochastic/anytime/: _test.py  agent.py  environment.py  interaction.py
src/settings/bandits/stochastic/anytime/agents/: IMED.py  _Oracle.py  _Random.py
src/settings/bandits/stochastic/anytime/envs/: distributions.py  environments.yaml  parametric.py
src/settings/bandits/stochastic/anytime/renderers/: textRenderer.py  textrenderer.py
src/settings/bandits/stochastic/knownhorizon/: agent.py  environment.py  interaction.py
src/settings/bandits/stochastic/knownhorizon/wrappers/: wrapper_anytime_knownhorizon.py
src/settings/multiarmedbandit/batch/: environment.py
src/settings/multiarmedbandit/stochastic/anytime/: _test.py  interaction.py
src/settings/multiarmedbandit/stochastic/anytime/agents/: IMED.py  _Oracle.py  _Random.py
src/settings/multiarmedbandit/stochastic/anytime/envs/: parametric.py
src/settings/multiarmedbandit/stochastic/anytime/renderers/: textrenderer.py
src/settings/multiarmedbandit/stochastic/knownhorizon/: environment.py  interaction.py
src/settings/multiarmedbandit/stochastic/knownhorizon/wrappers/: wrapper_anytime_knownhorizon.py
src/statrl/: registry.py
src/statrl/experiments/: analyzeruns.py  massiveruns.py  onerun.py  parallelruns.py  plotruns.py
src/statrl/settings/: structuration.md  utils.py  validator.py
src/statrl/settings/bandits/adversarial/lipschitz/: environment.py  interaction.py
src/statrl/settings/bandits/adversarial/lipschitz/agents/: ALF.py
src/statrl/settings/bandits/batch/: environment.py
src/statrl/settings/bandits/stochastic/anytime/: _test.py  environment.py  interaction.py
src/statrl/settings/bandits/stochastic/anytime/agents/: IMED.py  _Oracle.py  _Random.py  agents.yaml
src/statrl/settings/bandits/stochastic/anytime/envs/: distributions.py  environments.yaml  parametric.py
src/statrl/settings/bandits/stochastic/anytime/renderers/: textrenderer.py
src/statrl/settings/bandits/stochastic/knownhorizon/: environment.py  interaction.py
src/statrl/settings/bandits/stochastic/knownhorizon/wrappers/: wrapper_anytime_knownhorizon.py
src/statrl/settings/markovdecisionprocess/: _test.py  environment.py  interaction.py
src/statrl/settings/markovdecisionprocess/agents/: Human.py  IMED_RL.py  PSRL.py  _Oracle.py  _Random.py
src/statrl/settings/markovdecisionprocess/discrete_nostructure/: _test.py  agent.py  interaction.py
src/statrl/settings/markovdecisionprocess/discrete_nostructure/agents/: Human.py  IMED_RL.py  PSRL.py  _Oracle.py  _Random.py
src/statrl/settings/markovdecisionprocess/discrete_nostructure/envs/: environments.yaml  randomMDP.py  riverswim.py
src/statrl/settings/markovdecisionprocess/envs/: Riverswim.py  environments.yaml
src/statrl/settings/markovdecisionprocess/gridworld/: agent.py  environment.py  interaction.py
src/statrl/settings/markovdecisionprocess/gridworld/envs/: gridworlds.py
src/statrl/settings/markovdecisionprocess/gridworld/renderers/: textRenderer.py
src/statrl/settings/markovdecisionprocess/renderers/: textRenderer.py
tests/: test_batch.py  test_environment.py  test_experiments.py  test_utils.py
