[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "statrl"
version = "0.0.1"
description = "The Statistical Reinforcement Learning Toolkit Library"
authors = [{ name = "Odalric-Ambym Maillard", email = "odalric.maillard@inria.fr" }]
readme = "README.md"
license = { text = "MIT" }
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.9"
dependencies = [
    "gymnasium>=1.0",
    "numpy>=2.1",
    "joblib>=1.4",
    "matplotlib>=3.9",
    "scipy>=1.11",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = ["pytest"]
lint = ["ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/StatisticalRL/statrl"
Repository = "https://github.com/StatisticalRL/statrl"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
files = ["src"]
python_version = "3.9"
# gymnasium/scipy/joblib lack stubs, so don't error on their missing imports.
ignore_missing_imports = true
# Every function is annotated — enforce that it stays that way.
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
# src layout, so ruff resolves `settings`/`experiments` as first-party.
src = ["src"]
# Default ruleset (pyflakes F + pycodestyle E4/E7/E9). target-version is inferred
# from project.requires-python.
#packages = [
#    "statrl",
#    "statrl.experiments",
#    "statrl.settings",
#    "statrl.settings.bandits",
#    "statrl.settings.bandits.stochastic",
#    "statrl.settings.bandits.stochastic.anytime",
#    "statrl.settings.bandits.stochastic.anytime.agents",
#    "statrl.settings.bandits.stochastic.knownhorizon",
#    "statrl.settings.bandits.stochastic.knownhorizon.wrappers",
#    "statrl.settings.bandits.adversarial",
#    "statrl.settings.bandits.adversarial.lipschitz",
#    "statrl.settings.bandits.adversarial.lipschitz.agents",
#]
